--- a/www/templates/account/organizingdata.html
+++ b/www/templates/account/organizingdata.html
@@ -48,7 +48,7 @@
           <span class="input-label"> 身份证 </span>
           <input type="number" placeholder="请输入身份证号码" check-form
                  ng-blur="checkForm(userinfo.id_card,'身份证输入不正确','identitycard','')"
-                 ng-model="userinfo.id_card">
+                 ng-model="userinfo.id_card" maxlength="18">
         </label>
 
       </ion-list>
