元亨祥母婴商城

--- a/www/templates/account/organizingdata.html
+++ b/www/templates/account/organizingdata.html
@@ -46,7 +46,7 @@
 
         <label class="item item-input ">
           <span class="input-label"> 身份证 </span>
-          <input type="number" placeholder="请输入身份证号码" check-form
+          <input type="text" placeholder="请输入身份证号码" check-form
                  ng-blur="checkForm(userinfo.id_card,'身份证输入不正确','identitycard','')"
                  ng-model="userinfo.id_card" maxlength="18">
         </label>
