--- a/www/templates/account/addaddress.html
+++ b/www/templates/account/addaddress.html
@@ -21,12 +21,12 @@
 
         <label class="item item-input ">
           <span class="input-label"> 姓名 </span>
-          <input type="text" ng-model="addrinfo.name" placeholder="请输入姓名" required>
+          <input type="text" ng-model="addrinfo.name" placeholder="请输入真实姓名" required>
         </label>
 
         <label class="item item-input ">
           <span class="input-label"> 身份证 </span>
-          <input type="text" placeholder="请输入身份证号码" check-form
+          <input type="text" placeholder="请输入真实身份证号码" check-form
                  ng-blur="checkForm(addrinfo.id_card,'身份证输入不正确','identitycard','')"
                  ng-model="addrinfo.id_card" minlength="15" maxlength="18" required>
         </label>
@@ -48,6 +48,7 @@
         </label>
 
       </ion-list>
+      <p class="padding grey">根据海关要求：海外商品入境需提交姓名和身份证号信息用于清关申报，请确保提供真实有效的身份证号信息</p>
       <div class="padding">
         <button class="button button-positive full-image" ng-disabled="!(addaddress.$valid&&verify)" ng-click="addressSave()">
           确认保存
